# uipath-langchain-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GitVersion.yml  README.md  SETUP.MD  azure-pipelines.yml  commitlint.config.mjs  pyproject.local.toml  pyproject.toml  pyrightconfig.json  pytest.ini  sonar-project.properties  start-robot.sh  uipath.robot.local.toml
examples/s2p-eog-agent/: entry-points.json  main.py  project.uiproj  pyproject.toml
samples/RAG-quiz-generator/: bindings.json  env.example  pyproject.toml
samples/RAG-quiz-generator/src/agents/: quiz-generator-RAG-agent.py  researcher-RAG-agent.py
samples/assistmaigic-customer-care-agent/: README.md  agent.mermaid  input.json  pyproject.toml  uipath.json
samples/chat-uipath-agent/: graph.py  pyproject.toml
samples/coded-deepagent/: README.md  agent.mermaid  graph.py  input.json  pyproject.toml
samples/coded-deepagent-node/: README.md  graph.py  input.json  pyproject.toml  uipath.json
samples/company-research-agent/: .env.example  Dockerfile  README.md  agent.mermaid  entry-points.json  graph.py  main.py  pyproject.toml  uipath.json
samples/company-research-agent/.github/workflows/: ci-cd.yml
samples/company-research-agent/evals/eval-sets/: default.json
samples/company-research-agent/evals/evaluators/: llm-as-a-judge.json
samples/deep-research-agent/: .env.example  README.md  graph.py  pyproject.toml
samples/deepagent-serverless/: README.md  agent.mermaid  input.json  langgraph.json  pyproject.toml  sandbox.mermaid
samples/deepagent-serverless/src/deepagent_serverless/: graph.py  sandbox.py  serverless_backend.py
samples/deepagent-storage-buckets/: README.md  agent.mermaid  langgraph.json  pyproject.toml
samples/deepagent-storage-buckets/src/deepagent_storage_buckets/: buckets_backend.py  graph.py
samples/document-routing-agent/: README.md  agent.mermaid  langgraph.json  main.py  pyproject.toml  uipath.json
samples/document-routing-agent/test_cases/expected_output/: test1_out.json  test2_out.json  test3_out.json  test4_out.json  test5_out.json
samples/document-routing-agent/test_cases/input/: test1_in.json  test2_in.json  test3_in.json  test4_in.json  test5_in.json
samples/ecommerce-scraper-agent/: agent.mermaid  main.py  pyproject.toml
samples/ecommerce-scraper-agent/evaluations/eval-sets/: edge-cases.json  happy-path.json  output-structure.json
samples/ecommerce-scraper-agent/evaluations/evaluators/: json-similarity.json  llm-judge-output.json  trajectory.json
samples/email-organizer-agent/: pyproject.toml
samples/email-organizer-agent/src/email_organizer/: main.py  outlook_client.py
samples/email-triage-agent/: README.md  agent.mermaid  bindings.json  graph.py  pyproject.toml
samples/expense-approval-agent/: .env.example  README.md  agent.mermaid  main.py  pyproject.toml  uipath.json
samples/expense-approval-agent/test_cases/expected_output/: test1_out.json  test2_out.json  test3_out.json  test4_out.json  test5_out.json
samples/expense-approval-agent/test_cases/input/: test1_in.json  test2_in.json  test2_resume_payload.json  test3_in.json  test3_resume_payload.json  test4_in.json  test5_in.json
samples/file-attachments-chat-agent/: .env.example  README.md  entry-points.json  main.py  pyproject.toml  uipath.json
samples/gym-sample/: .env.example  README.md  USAGE.md  calculator.mermaid  eval.sh  evaluation_results_sample.json  export_evals.sh  gym.json  langgraph.json  pyproject.toml  run.sh  test_input.json  uipath.json
samples/gym-sample/src/gym_sample/: eval_runtime.py  evals.py  evals_helpers.py  evals_utils.py  evaluators.py  export_evals.py  graph.py  middlewares.py  run.py  runtime.py  tools.py  trace_utils.py  uipath_gym_types.py  utils.py
samples/invoke-process-timeout-agent/: README.md  graph.py  langgraph.json  pyproject.toml
samples/invoke-process-timer-race-agent/: README.md  bindings.json  graph.py  langgraph.json  pyproject.toml  uipath.json
samples/joke-agent/: README.md  bindings.json  graph.py  middleware.py  pyproject.toml
samples/joke-agent-decorator/: README.md  graph.py  pyproject.toml
samples/leave-management-agent/: README.md  agent.mermaid  main.py  pyproject.toml  requirements.txt  uipath.json
samples/ltl-claims-agents/: .gitignore  AGENT_ARCHITECTURE.mermaid  AGENT_WORKFLOW.mermaid  AGENT_WORKFLOW_SIMPLE.mermaid  README.md  main.py  pyproject.toml  requirements.txt  test_input.json  uipath.json
samples/ltl-claims-agents/src/: __init__.py
samples/ltl-claims-agents/src/agents/: __init__.py  base_agent.py  compliance_validator_agent.py  config.py  document_processor_agent.py  exceptions.py  orchestrator_agent.py  risk_assessor_agent.py
samples/ltl-claims-agents/src/config/: __init__.py  constants.py  errors.py  (+4 more)
samples/mcp-refactoring-assistant/: .env.example  README.md  agent.mermaid  entry-points.json  graph.py  input.json  langgraph.json  pyproject.toml  server.py
samples/mcp-refactoring-assistant/prompts/: __init__.py  extract_method.py  improve_naming.py  remove_duplication.py  simplify_conditional.py
samples/mcp-refactoring-assistant/tools/: __init__.py  code_analysis.py  refactoring_guide.py
samples/multi-agent-planner-researcher-coder-distributed/: .env.example  README.md  coder.mermaid  entry-points.json  planner.mermaid  pyproject.toml
samples/multi-agent-supervisor-researcher-coder/: agent.mermaid  entry-points.json  graph.py  pyproject.toml
samples/peppol-participant-discovery/: .env.example  README.md  pyproject.toml  uipath.json
samples/simple-deepagent/: README.md  entry-points.json  graph.py  langgraph.json  pyproject.toml
template/: README.md  agent.mermaid  entry-points.json  input.json  main.py  project.uiproj  pyproject.toml
template/.agent/: SDK_REFERENCE.md
template/.uipath/: studio_metadata.json
template/evaluations/eval-sets/: evaluation-set-default.json
template/evaluations/evaluators/: evaluator-default.json  llm-judge-output.json  tool-call-arguments.json  tool-call-count.json  tool-call-order-1774285735846.json  tool-call-order.json
(+1275 files in other folders)
