[project]
name = "uipath-agents"
version = "0.0.0"
description = "UiPath Agents"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11,<3.14"
dependencies = [
  "uipath==2.7.11",
  "uipath-langchain[vertex,bedrock]==0.5.31",
  "langgraph>=1.0.0,<2.0.0",
  "azure-monitor-opentelemetry-exporter>=1.0.0b46,<2.0.0",
  "opentelemetry-instrumentation-httpx>=0.60b0",
  "opentelemetry-instrumentation-aiohttp-client>=0.60b0",
]
maintainers = [
  { name = "Silviu Georgescu", email = "silviu.georgescu@uipath.com" },
  { name = "Cristian Cotovanu", email = "cristian.cotovanu@uipath.com" },
]

[project.entry-points."uipath.runtime.factories"]
agents = "uipath_agents.runtime:register_runtime_factory"

[project.entry-points."uipath.preload"]
preloads = "uipath_agents.preload:get_preload_modules"

[project.urls]
Homepage = "https://uipath.com"
Repository = "https://github.com/UiPath/uipath-agents-python"
Documentation = "https://github.com/UiPath/uipath-agents-python/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "uipath-robot>=0.0.11",
  "datamodel-code-generator>=0.33.0",
  "debugpy>=1.8.17",
  "mypy>=1.14.1",
  "pre-commit>=4.1.0",
  "pytest_httpx>=0.35.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.1",
  "pytest-xdist>=3.5.0",
  "pytest>=7.4.0",
  "requests>=2.32.5",
  "ruff>=0.9.4",
  "uipath-dev>=0.0.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/uipath_agents"]

[tool.hatch.build.targets.sdist]
exclude = [
  # Test and example code
  "tests/",
  "examples/",

  # CI/CD and tooling
  ".github/",
  "*.yml",
  "*.yaml",
  "Dockerfile",

  # Documentation
  "*.md", # All markdown except README.md (auto-kept)

  # Local IDE or dev configs
  "pytest.ini",
  "pyproject.local.toml",
  ".*",
  "!.gitignore",          # Except this one
  ".pycharm/",
  ".claude/",
]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["samples/**", "testcases/**"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.lint.per-file-ignores]
"*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ["samples/.*", "testcases/.*"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["jsonschema_pydantic.*"]
follow_untyped_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
  "e2e: End-to-end tests that require UiPath authentication",
  "slow: Tests that take a long time to run",
]

[tool.coverage.run]
source = ["src/uipath_agents"]
relative_files = true
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*", "*/conftest.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[[tool.uv.index]]
name = "alpha"
url = "https://pkgs.dev.azure.com/uipath/SemanticProxy/_packaging/python-packages-private-alpha/pypi/simple/"
publish-url = "https://pkgs.dev.azure.com/uipath/SemanticProxy/_packaging/python-packages-private-alpha/pypi/upload/"
explicit = true

[[tool.uv.index]]
name = "prod"
url = "https://pkgs.dev.azure.com/uipath/SemanticProxy/_packaging/python-packages-private-prod/pypi/simple/"
publish-url = "https://pkgs.dev.azure.com/uipath/SemanticProxy/_packaging/python-packages-private-prod/pypi/upload/"
explicit = true
