[project]
name = "uipath-langchain-template-agent"
version = "0.0.1"
description = "uipath-langchain-template-agent"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "ddgs>=9.11.4",
    "langchain-community>=0.4.1",
    "uipath-langchain[bedrock,vertex]>=0.9.21, <0.10.0",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "uipath-dev>=0.0.74",
]
