[project]
name = "uipath-langchain-template-agent"
version = "0.0.1"
description = "uipath-langchain-template-agent"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "uipath-langchain[bedrock,vertex]>=0.10.0, <0.11.0",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "uipath-dev>=0.0.74",
]
