[project]
name = "RAG-agents"
version = "0.0.1"
description = "Project containing two agents: quiz-generator-RAG-agent and researcher-RAG-agent."
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "langgraph>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-anthropic>=1.2.0",
    "langchain-experimental>=0.4.0",
    "langchain-tavily>=0.2.13",
    "uipath-langchain",
    "uipath",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "uipath-dev",
]
