[project]
name = "chat-uipath-agent"
version = "0.0.1"
description = "Chat agent with UiPath LLM and web search"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.4",
    "langchain-community>=0.3.21",
    "ddgs>=9.6.1",
    "uipath-langchain",
    "uipath",
]

[dependency-groups]
dev = [
     "uipath-dev",
]

