[project]
name = "coded-deepagent-node"
version = "0.0.1"
description = "Parent LangGraph workflow with an embedded UiPath DeepAgent node"
authors = [{ name = "UiPath", email = "support@uipath.com" }]
requires-python = ">=3.11"
dependencies = [
    "uipath-langchain>=0.15.0, <0.16.0",
]

[tool.uv.sources]
uipath-langchain = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "uipath-dev",
]
