[project]
name = "company-research-agent"
version = "0.0.1"
description = "company-research-agent"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "uipath-langchain>=0.0.106",
    "langchain-anthropic>=0.3.8",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
