[project]
name = "deep-research-agent"
version = "0.0.1"
description = "Research agent using UiPath Deep Agents with subagents"
authors = [{ name = "Gaurav Singh", email = "gaurva.singh@uipath.com" }]
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.3.9",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "uipath>=2.7.0, <2.8.0",
    "uipath-langchain",
]

[dependency-groups]
dev = ["uipath-dev>=0.0.20"]

[tool.uv.sources]
uipath-langchain = { path = "../.." }
