[project]
name = "sandbox-deepagent"
version = "0.0.6"
description = "DeepAgent with serverless sandbox backend via interrupt(InvokeProcess)"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.3.9",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "tavily-python>=0.7.21",
    "uipath",
    "uipath-langchain",
]

[dependency-groups]
dev = [
    "uipath-dev",
]
