[project]
name = "deepagent-storage-buckets"
version = "0.0.1"
description = "DeepAgent with persistant storage in Orchestrator Buckets"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.3.9",
    "langchain-anthropic>=1.3.1",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "tavily-python>=0.7.21",
    "uipath",
    "uipath-langchain",
]

[dependency-groups]
dev = [
    "uipath-dev",
]
