[project]
name = "email-organizer-agent"
version = "0.0.1"
description = "Email Organizer Agent: Outlook rule creator"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.4",
    "langchain-anthropic>=1.2.0",
    "langchain-community>=0.4.1",
    "uipath-langchain",
    "uipath",
]

[dependency-groups]
dev = [
    "uipath-dev",
]
