[project]
name = "file-attachments-chat-agent"
version = "0.0.1"
description = "file-attachments-chat-agent"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "langchain-anthropic>=1.3.3",
    "langchain-openai>=1.1.9",
    "langchain-tavily>=0.2.17",
    "uipath-langchain==0.5.76.dev1006122973",
]
requires-python = ">=3.11"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
uipath-langchain = { index = "testpypi" }
