[project]
name = "joke-agent-decorator"
version = "0.0.1"
description = "Joke generating agent that creates family-friendly jokes based on a topic - using decorator-based guardrails"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
requires-python = ">=3.11"
dependencies = [
    "uipath-langchain>=0.9.20, <0.10.0",
    "uipath>2.7.0",
]

[dependency-groups]
dev = [
    "uipath-dev>=0.0.14",
]

[tool.uv.sources]
uipath-langchain = { path = "../..", editable = true }
