[project]
name = "joke-agent"
version = "0.0.1"
description = "Joke generating agent that creates family-friendly jokes based on a topic"
authors = [{ name = "Andrei Petraru", email = "andrei.petraru@uipath.com" }]
requires-python = ">=3.11"
dependencies = [
    "uipath-langchain",
    "uipath",
]

[dependency-groups]
dev = [
    "uipath-dev",
]
