[project]
name = "joke-agent"
version = "0.0.2"
description = "Joke generating agent that creates family-friendly jokes based on a topic"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
requires-python = ">=3.11"
dependencies = [
    "uipath-langchain>=0.9.26, <0.11.0",
    "uipath>2.7.0",
]

[dependency-groups]
dev = [
    "uipath-dev",
]
