[project]
name = "multi-agents-distributed"
version = "0.0.1"
description = "Supervisor agent that coordinates between a researcher and a coder"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.4",
    "langchain-anthropic>=1.2.0",
    "langchain-experimental>=0.4.0",
    "langchain-tavily>=0.2.13",
    "uipath-langchain",
    "uipath",
]

[dependency-groups]
dev = [
    "uipath-dev",
]
