[project]
name = "multi_agent_supervisor"
version = "0.0.1"
description = "Multi-agent system where a supervisor coordinates between a researcher and a coder"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.4",
    "langchain-anthropic>=1.2.0",
    "langchain-experimental>=0.4.0",
    "tavily-python>=0.7.13",
    "langchain-tavily>=0.2.13",
    "uipath",
    "uipath-langchain",
]

[dependency-groups]
dev = [
    "uipath-dev",
]
