[project]
name = "peppol-participant-discovery"
version = "0.1.0"
description = "UiPath agent for extracting PEPPOL master data from email signatures"
requires-python = ">=3.11"
authors = [{ name = "Christian Prior-Mamulyan" }]

dependencies = [
    "uipath>=2.1.0",
    "pydantic>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "httpx>=0.24.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peppol_participant_discovery"]
