[project]
name = "simple-deepagent"
version = "0.0.1"
description = "Simple DeepAgent for research tasks using Tavily search"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.3.9",
    "langchain-anthropic>=1.3.1",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "tavily-python>=0.7.21",
    "uipath>=2.6.0, <2.7.0",
    "uipath-langchain>=0.5.19, <0.6.0",
]

[dependency-groups]
dev = [
    "uipath-dev>=0.0.20",
]
